# ViolaWake

./: .dockerignore  .gitignore  .viola-nova-ww10-output.txt  ACCURACY_MISSION.md  ADVERSARY_AUDIT.md  BUILD_VS_BUY_AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  E2E_READINESS.md  FUNCTIONAL_GAP_ANALYSIS.md  LAUNCH_READINESS.md  LICENSE  PROGRESS.md  README.md  RELEASE_NOTES.md  SECURITY.md  _write_wake_detector.py  diagnostic_embedding_analysis.py  pyproject.toml  railway.json  railway.toml
.github/workflows/: ci.yml  console-ci.yml  docs.yml  model-verify.yml  release.yml
benchmark_oww/: BENCHMARK_REPORT.md  benchmark_results.json  generate_oww_positives.py  oww_alexa_scores.csv  run_benchmark.py  violawake_viola_scores.csv
benchmark_v2/: BENCHMARK_REPORT_v2.md  OPERATOR_BENCHMARK.md  benchmark_results_v2.json  build_corpus.py  oww_scores_v2.csv  run_benchmark.py  violawake_scores_v2.csv
console/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  launch.py  run_e2e.py
console/backend/: .env.example  alembic.ini  requirements.txt  run.py
console/backend/alembic/: env.py
console/backend/app/: __init__.py  auth.py  config.py  database.py  email_service.py  health.py  job_queue.py  main.py  middleware.py  models.py  monitoring.py  rate_limit.py  retention.py  schemas.py  storage.py
console/backend/scripts/: train_full_pipeline.py
console/frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
console/frontend/public/: robots.txt  sitemap.xml
console/frontend/src/: App.tsx  api.ts  types.ts
console/tests/: screenshot_audit.py  test_auth_email_routes.py  test_backend.py  test_billing.py  test_health_monitoring.py  test_job_queue.py  test_retention.py  test_storage.py  test_teams.py
console/tests/e2e/: conftest.py  conftest_playwright.py  pytest.ini  test_api_flow.py  test_browser_flow.py
docs/: ARCHITECTURE.md  AUDIT_2026_03_28.md  BUSINESS_PLAN.md  COMPETITIVE_ANALYSIS.md  PRD.md  PRE_LAUNCH_CHECKLIST.md  PROVEN_TRAINING_RECIPE.md  REGISTRY.md  ROADMAP_10_OF_10.md  S1.3_REQUIREMENTS_SYNTHESIS.md  SHOW_HN_DRAFT.md  TEST_STRATEGY.md  index.html
docs/adr/: ADR-001-onnx-runtime.md  ADR-002-oww-feature-extractor.md  ADR-003-python-first.md  ADR-004-open-core.md  ADR-005-packaging.md
docs/api/: README.md  index.html  search.js  violawake.html  violawake_sdk.html
docs/archive/: BENCHMARK_REPORT_oww.md  META_ANALYSIS_mlp_era.md  RESULTS_eval_clean_mlp.md  STREAMING_VS_CLIP_ANALYSIS.md  far_frr_report_mlp.md
eval_clean/: MANIFEST.md  analyze_corrected.py  analyze_final.py  analyze_scores.py  far_frr_report.md  results_maxpool.json  results_meanpool.json  run_eval.py  scores_maxpool.csv  scores_meanpool.csv
examples/: async_detection.py  basic_detection.py  streaming_eval.py
experiments/: B_confusable.scores.csv  C_diverse.scores.csv  D_bce_s42.scores.csv  D_bce_s43.scores.csv  D_bce_s44.scores.csv  D_combined.scores.csv  D_combined_deep.scores.csv  D_combined_narrow.scores.csv  D_combined_s42_baseline.scores.csv  D_combined_s43.scores.csv  D_combined_s44.scores.csv  D_combined_wide.scores.csv  E_maxdata.scores.csv  F_musan.scores.csv  G_acav.scores.csv  G_acav_bal5_bce_s42.scores.csv  G_acav_bal5_bce_s43.scores.csv  G_acav_bal5_bce_s44.scores.csv  H_confusable_v2.scores.csv  H_confusable_v2_bce_s42.scores.csv  H_confusable_v2_bce_s43.scores.csv  H_confusable_v2_bce_s44.scores.csv  I_full_corpus.scores.csv  I_full_corpus_bal3_bce_s42.scores.csv  I_full_corpus_bal3_bce_s43.scores.csv  I_full_corpus_bal3_bce_s44.scores.csv  META_ANALYSIS.md  REAL_SPEECH_EVAL.md  RED_TEAM_REPORT.md  all_results.json  augment_v2.py  baseline.scores.csv  compare_embedding_paths.py  confusable_mining.py  confusable_mining_results.json  download_acav100m.py  download_acav100m_features.py  duplicate_audit_report.json  eval_heldout_check.py  exp_G_acav_bal5_bce.json  (+78 more)
experiments/eval_fresh/: eval_report.json
experiments/training_data/: generate_confusable_mega.py  manifest.json
experiments/training_data/confusable_mega/: manifest.json
scripts/: deploy_launch.py  generate_docs.py  live_compare.py  verify_models.py
src/violawake/: __init__.py
src/violawake_sdk/: __init__.py  _constants.py  _exceptions.py  async_detector.py  audio.py  audio_source.py  confidence.py  ensemble.py  models.py  noise_profiler.py  oww_backbone.py  pipeline.py  power_manager.py  speaker.py  stt.py  stt_engine.py  tts.py  tts_engine.py  vad.py  vad_engine.py  wake_detector.py
src/violawake_sdk/backends/: __init__.py  base.py  (+2 more)
src/wakeword/: __init__.py
tests/: conftest.py  golden_path_test.py
tests/benchmarks/: bench_latency.py
tests/integration/: test_feature_completeness.py  test_full_pipeline.py  test_pipeline.py  test_sdk_surface.py  test_streaming_stt.py  test_training_e2e.py  test_wake_detector_e2e.py
tests/unit/: test__constants.py  test_async_detector.py  test_audio.py  test_audio_source.py  test_augment.py  test_benchmark.py  test_cert_pinning.py  test_cli.py  test_concurrent_access.py  test_confidence.py  test_confusables.py  test_detector_config.py  test_ensemble.py  test_evaluate_oww.py  test_fuzz.py  test_long_running.py  test_losses.py  test_model_download.py  test_models.py  test_noise_profiler.py  test_oww_backbone.py  test_performance.py  test_pipeline.py  test_power_manager.py  test_rir_augment.py  test_speaker.py  test_spec_augment.py  test_stress.py  test_stt_engine.py  test_stt_engine_wav.py  test_stt_tts_engines.py  test_temporal_model.py  test_tflite_backend.py  test_train.py  test_training_pipeline.py  test_tts_engine.py  test_vad.py  test_vad_engine.py  test_voice_pipeline.py  test_wake_decision_policy.py  (+5 more)
tools/: audit_deps.py  benchmark.py  benchmark_regression_check.py  build_clean_eval_set.py  far_frr_analysis.py  fetch_release_models.py  live_head_to_head.py  merge_worktrees.py  quality_gate.py  setup_github_repo.sh  update_model_registry.py
wasm/: README.md  package.json  rollup.config.mjs  tsconfig.json
wasm/demo/: index.html
wasm/src/: detector.ts  features.ts  index.ts
(+71 files in other folders)
